[package]
name = "rspsutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Wdk_System_SystemInformation",  "Win32_System_SystemInformation"] }
