[package]
name = "rspsutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glob = "0.3.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Wdk_System_SystemInformation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_System_Variant",
] }